# ESP32-S3-display-dashboard

./: .env  .gitignore  ALL_FIXES_COMPLETE.md  ALTERNATIVE_OTA_METHOD.md  ARCHITECTURE.md  BOOTLOADER_16MB_FIX.md  BOOTLOADER_INVESTIGATION_REPORT.md  BOOTLOADER_ISSUE_FINAL.md  BUILD_VALIDATION_REPORT.md  BUTTON_RESPONSIVENESS_TEST.md  CHANGELOG.md  CHANGELOG_LCD_DMA.md  CLAUDE.md  Cargo.toml  Cargo.toml.esp32  DARK_MODE_AND_NAVIGATION_COMPLETE.md  DARK_MODE_UI_COMPLETE.md  DARK_MODE_UI_IMPLEMENTATION.md  DEBUGGING_IMPROVEMENTS.md  DEBUGGING_SESSION_SUMMARY.md  DEPLOYMENT_ISSUES.md  DEVICE_RECOVERY.md  DISPLAY_COMMAND_INVESTIGATION.md  DISPLAY_DRIVER_IMPLEMENTATION.md  DISPLAY_FIX_ANALYSIS.md  DMA_IMPLEMENTATION_PLAN.md  ESP32-S3_OTA_SOLUTION.md  ESP32_S3_OPTIMIZATION_ANALYSIS.md  ESP32_WEB_INTEGRATION_GUIDE.md  ESP_IDF_MIGRATION.md  ESP_IDF_VERSION_SUMMARY.md  ESP_LCD_6BLOCK_FIX_SUMMARY.md  ESP_LCD_6_BLOCK_ANALYSIS.md  ESP_LCD_BLOCK_DEBUG_GUIDE.md  ESP_LCD_BLOCK_DEBUG_STATUS.md  ESP_LCD_COMPREHENSIVE_DEBUG_SUMMARY.md  ESP_LCD_CURRENT_STATUS.md  ESP_LCD_DEBUG_SUMMARY.md  ESP_LCD_DISPLAY_FIX_REPORT.md  ESP_LCD_DMA_CURRENT_STATE.md  (+128 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: arduino-ci.yml  binary-size.yml  build.yml  docs.yml  rust-ci.yml
dashboard/: README.md  dashboard.ino  dashboard.ino.backup-ui  dashboard.ino.ota  wifi_config.h.example
dashboard-core/: Cargo.toml
dashboard-core/src/: color_utils.rs  config.rs  display_math.rs  lib.rs
diag-logs/20250808-183644-10.27.27.201/: http_health.tsv  http_ping.tsv
diag-logs/20250808-184436-10.27.27.201/: http_health.tsv  http_ping.tsv
diag-logs/20250808-190408-10.27.27.201/: http_health.tsv  http_ping.tsv  summary.txt
diag-logs/20250808-202648-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv
diag-logs/20250808-203408-10.27.27.201/: http_health.tsv  http_ping.tsv  network.tsv
diag-logs/20250808-203840-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250808-204601-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250808-210448-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250808-212858-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250808-220628-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250809-022624-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
diag-logs/20250809-073815-10.27.27.201/: http_health.tsv  http_ping.tsv  last_health.json  network.tsv  network_aligned.txt  summary.txt
docs/: ARDUINO_PERFORMANCE_OPTIMIZATIONS.md  AREAS_TO_WORK_ON.md  AUTO_UPDATE_SUMMARY.md  CI_CD_SETUP.md  CONNECTION_MONITORING.md  FINDINGS.md  GRACEFUL_SHUTDOWN.md  RELIABILITY_PLAN.md  ROADMAP.md  RUST_ADVANTAGES_DETAILED.md  UI_UPDATE_SUMMARY.md
docs/legacy/: PWM_BACKLIGHT_ANALYSIS.md
enhanced_dashboard_backup/: TEST_LOG.md  enhanced_dashboard.ino  fonts.h  graphics.h  icons.h  screens.h  sensors.h  themes.h  touch.h  wifi_manager.h
examples/: animation_demo.rs  hardware_test.rs
examples/rust_ffi_display/: Cargo.toml  README.md  build.rs  display_ffi.h
examples/rust_ffi_display/src/: display.rs  main.rs
host-tests/: Cargo.toml
host-tests/.cargo/: config.toml
host-tests/src/: lib.rs
legacy/: flash-old.sh
minimal_dashboard/: minimal_dashboard.ino
ota-tool/: Cargo.toml
partition_table/: partitions.csv  partitions_ota.csv
partitions/: partitions_16mb_ota.csv
rust-dashboard/: COMPILATION_STATUS.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
rust-dashboard/.cargo/: config.toml
rust-dashboard/docs/: EXISTING_SOLUTIONS_RESEARCH.md  LCD_CAM_RESEARCH.md
rust-dashboard/src/: config.rs  main.rs
rust-dashboard/src/animation/: mod.rs
rust-dashboard/src/display/: font.rs  font5x7.rs  lcd_cam.rs  lcd_cam_i8080.rs  mod.rs
rust-dashboard/src/hardware/: buttons.rs
rust-dashboard/src/ota/: manager.rs  mod.rs  web_server.rs
rust-dashboard/src/sensors/: ambient_light.rs  battery.rs  mod.rs  temperature.rs
rust-dashboard/src/tests/: animation_tests.rs  hardware_tests.rs  mod.rs
rust-dashboard/src/ui/: dashboard.rs  mod.rs  theme.rs  widgets.rs
rust-dashboard/src/ui/components/: graph.rs  spinner.rs
rust-dashboard/src/ui/screens/: power.rs  system.rs
scripts/: README.md  apply-web-server-fix.sh  baseline-performance.sh  capture-serial.py  check-partition.sh  cleanup.sh  debug-web-server.sh  device-recovery.sh  esp32-aliases.sh  espflash-wrapper.sh  filter-logs.sh  fix-build.sh  flash-and-boot.sh  flash-simple.sh  flash.sh  monitor-boot.sh  monitor-errors.py  monitor-lcd-test.sh  monitor-ota.sh  monitor-performance.py  monitor-simple.sh  monitor-telnet.py  monitor-telnet.sh  monitor-trace.sh  monitor-working.sh  monitor.sh  ota.sh  profile-performance.sh  quick-flash.sh  quick-monitor.py  recover.sh  reset-and-monitor.py  run-python-tests-sequential.sh  run-python-tests.sh  run-tests-sequential-simple.sh  simple-monitor.sh  telnet-control.py  test-esp-lcd.sh  verify-vertical-striping-fix.sh  web_heartbeat.py
src/: boot.rs  boot_diagnostics.rs  config.rs  crash_diagnostics.rs  crash_persist.rs  debug_probe.rs  defmt_config.rs  diagnostics.rs  display_mipidsi.rs  dual_core.rs  feature_gates.rs  hardware_timer.rs  lib.rs  logging.rs  logging_enhanced.rs  main.rs  main.rs.backup  main_minimal.rs  memory_diagnostics.rs  metrics.rs  metrics_formatter.rs  metrics_rwlock.rs  performance.rs  performance_optimized.rs  psram.rs  ring_buffer.rs  sensors.rs  stability.rs  stability_fixes.rs  telemetry.rs  version.rs
static/: manifest.json  service-worker.js
test-minimal/: Cargo.toml
tests/: README.md
tools/: Debug.md
tools/ota/: Cargo.toml
tools/ota/src/: main.rs
(+260 files in other folders)
