[package]
name = "esp32-s3-dashboard"
version = "0.1.0"
authors = ["Justin"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = "fat"
strip = true

[profile.dev]
opt-level = 1

[dependencies]
# ESP-IDF Support (with std)
esp-idf-sys = { version = "=0.36.1", features = ["binstart"] }
esp-idf-svc = { 
    version = "=0.51.0", 
    default-features = false, 
    features = ["experimental"] 
}
esp-idf-hal = { version = "=0.45.2" }

# Async runtime
embassy-executor = { 
    version = "=0.7.0", 
    features = ["task-arena-size-65536"] 
}
embassy-time = { version = "=0.4.0" }
embassy-sync = { version = "=0.6.0" }

# Error handling and logging
anyhow = "=1.0.95"
log = "=0.4.22"

# Serialization for configuration
serde = { 
    version = "=1.0.217", 
    default-features = false, 
    features = ["derive"] 
}
serde_json = "=1.0.135"

# Embedded graphics
embedded-graphics = "=0.8.1"
embedded-graphics-core = "=0.4.0"

# HTTP Server for configuration
embedded-svc = "=0.28.1"

# Utilities
heapless = "=0.8.0"  # Still useful for fixed-size collections
static_cell = "=2.1.0"

[build-dependencies]
embuild = "=0.33.2"
anyhow = "=1.0.95"