[package]
name = "esp32-s3-dashboard"
version = "0.6.25"
authors = ["Justin"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"        # Optimize for size (most aggressive)
lto = "fat"           # Full LTO (use "fat" instead of true for compatibility)
codegen-units = 16    # Default codegen units to avoid register pressure
strip = true          # Strip debug info
panic = "abort"       # Remove unwinding tables
overflow-checks = false  # Disable overflow checks in release

[profile.dev]
opt-level = "s"  # Optimize for size in debug too
lto = false
debug = true     # Keep debug info for better crash diagnostics

[features]
default = []
esp_lcd_driver = []  # Enable ESP_LCD DMA driver instead of GPIO bit-bang
minimal_boot = []

[dependencies]
# ESP-IDF Support (with std)
esp-idf-sys = { version = "0.36.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "0.51.0", default-features = false, features = ["experimental", "alloc"] }
esp-idf-hal = { version = "0.45.2" }

# Async runtime
embassy-executor = { version = "=0.7.0", features = ["task-arena-size-65536"] }
embassy-time = { version = "=0.4.0" }
embassy-sync = { version = "=0.6.0" }

# Error handling and logging
anyhow = "=1.0.95"
log = "=0.4.22"

# Serialization for configuration
serde = { version = "=1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.135", default-features = false, features = ["alloc"] }

# Base64 encoding for screenshot data
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

# Compression for web assets
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# SHA256 for OTA validation
sha2 = { version = "0.10", default-features = false }


# Embedded graphics and display drivers
embedded-graphics = "=0.8.1"
embedded-graphics-core = "=0.4.0"
mipidsi = "0.7.1"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"

# HTTP Server for configuration
embedded-svc = "=0.28.1"

# Utilities
heapless = "=0.8.0"  # Still useful for fixed-size collections
static_cell = "2.1"
libm = "0.2.15"

[build-dependencies]
embuild = { version = "0.33.0", features = ["espidf"] }
anyhow = "=1.0.95"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }
