[package]
name = "esp32-s3-dashboard"
version = "0.1.0"
authors = ["Justin"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true            # Link-time optimization
strip = true          # Strip symbols
codegen-units = 1     # Single codegen unit
panic = "abort"       # Smaller panic handler

[profile.dev]
opt-level = 1         # Some optimization in debug
lto = false
debug = true

[dependencies]
# Core ESP-IDF support
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = { version = "0.43", features = ["critical-section"] }
esp-idf-svc = { version = "0.48", features = ["std", "experimental", "alloc"] }

# Embedded graphics
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"

# Utilities
log = { version = "0.4", default-features = false }
anyhow = "1.0"
heapless = "0.8"
critical-section = "1.1"

# For async (optional, decide later)
# embassy-executor = { version = "0.5", features = ["esp-idf"] }
# embassy-time = { version = "0.3", features = ["esp-idf"] }

[build-dependencies]
embuild = "0.31"
anyhow = "1.0"