[package]
name = "esp32-s3-dashboard"
version = "0.1.0"
authors = ["Justin"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true            # Link-time optimization
strip = true          # Strip symbols
codegen-units = 1     # Single codegen unit
panic = "abort"       # Smaller panic handler

[profile.dev]
opt-level = 1         # Some optimization in debug
lto = false
debug = true

[dependencies]
# Core ESP support with LCD_CAM
esp-hal = { version = "0.16", features = ["esp32s3", "async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-backtrace = { version = "0.11", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.9", features = ["esp32s3"] }

# For std support (WiFi, etc)
esp-idf-sys = { version = "0.34", optional = true, features = ["binstart"] }
esp-idf-hal = { version = "0.43", optional = true }
esp-idf-svc = { version = "0.48", optional = true, features = ["std", "experimental", "alloc"] }

# Embassy async runtime
embassy-executor = { version = "0.5", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.3" }
embassy-sync = { version = "0.5" }

# Embedded graphics
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"

# Utilities
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0", optional = true }
heapless = "0.8"
static_cell = "2.0"

[features]
default = ["std"]
std = ["esp-idf-sys", "esp-idf-hal", "esp-idf-svc", "anyhow"]

[build-dependencies]
embuild = { version = "0.31", optional = true }

# Patch to use latest esp-hal with LCD_CAM support
[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main" }
esp-hal-common = { git = "https://github.com/esp-rs/esp-hal", branch = "main" }