[package]
name = "esp32-s3-dashboard-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-hal = "0.42"
esp-idf-svc = { version = "0.47", features = ["std", "nativeTls"] }
embedded-svc = "0.26"
anyhow = "1.0"
log = "0.4"

[build-dependencies]
cc = "1.0"
embuild = "0.31"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds during development
opt-level = 1
lto = false