[package]
name = "esp32-ota"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ota"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.17"
colored = "2.0"